2012-06-20 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/graphs/pChart/pPie.class.php: ixed a bug in pie3d graph
	function when graph data only has one element.
	
	 include/functions_reporting.php
	 operation/reporting/reporting_viewer.php: Fixed a visualization 
	 problem in agent_modules report item.
	 
	 godmode/users/profile_list.php: Fixed a bug when profile creation
	fails.
	
	Merged from branches.

2012-06-20  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/agentes/module_manager.php
	  operation/agentes/estado_agente.php
	  operation/agentes/status_monitor: Changed interval format.

2012-06-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php
	operation/agentes/estado_agente.php: Fixed sort actions
	of agents operation view

	MERGED FROM 4.0.2

2012-06-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/net_tools.php: cleaned source code style.
	
	* extensions/module_groups.php,
	operation/agentes/status_monitor.php: fixed the lost "module group"
	"unasigned".
	
	Fixes: #3532075
	
	MERGED FROM 4.0.2

2012-06-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	godmode/agentes/module_manager.php: Added not init status
	in the manage modules view for bug 3533341

	MERGED FROM 4.0.2

2012-06-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_html.php, include/functions.php: cleaned source
	code style.
	
	* extensions/extension_uploader.php: fixed the upload enterprise
	extension.
	
	Fixes: #3532208
	
	MERGED FROM 4.0.2

2012-06-20  Hirofumi Kosaka  <kosaka@rworks.jp>

	* extensions/net_tools.php: Fixed bug: 'whereis' could find a
	command regardless of whether reachable or not with $PATH
	(and leads to fail the subsequent command execution).
	Merged from 4.0.2

2012-06-20  Hirofumi Kosaka  <kosaka@rworks.jp>

	* extensions/net_tools.php: Fixed bug: cannot find traceroute
	other than /usr/sbin/traceroute.
	Merged from 4.0.2

2012-06-20  Hirofumi Kosaka  <kosaka@rworks.jp>
